# parallel_prog

./: .gitignore  README.md  info.txt
1task/: CMakeLists.txt  README.md  main.cpp
2task/: 1main.cpp  2main.cpp  3_1main.cpp  3main.cpp  CMakeLists.txt  README.md
2task/1part/: CMakeLists.txt  README.md  main.cpp  result.csv  run.bash
2task/2part/: CMakeLists.txt  README.md  main.cpp  result.csv  run.bash
2task/3part/: 1main.cpp  2main.cpp  CMakeLists.txt  README.md
2task/3schedule/: CMakeLists.txt  README.md  main.cpp  run.bash
3task/1part/: main.cpp  result.csv  run.bash
3task/2part/: README.md  main.cpp
